Most of the basic game flow works
