# server/docs/swagger.yaml
@@ -116,8 +116,7 @@ definitions:
     - Deal
     - Discard
     - Cut
-    - PlayOwn
-    - PlayOpponent
+    - Play
     - PassTurn
     - Count
     - Kitty
@@ -132,8 +131,7 @@ definitions:
     - GamestateDeal
     - GamestateDiscard
     - GamestateCut
-    - GamestatePlayOwn
-    - GamestatePlayOpponent
+    - GamestatePlay
     - GamestatePassTurn
     - GamestateCount
     - GamestateKitty
@@ -159,6 +157,8 @@ definitions:
       currentplayerturn:
         type: integer
       cutgamecardid:
+        type: integer
+      dealerid:
         type: integer
       deckid:
         type: integer
@@ -243,6 +243,8 @@ definitions:
         type: integer
       cutgamecardid:
         type: integer
+      dealerid:
+        type: integer
       deckid:
         type: integer
       elorangemax:
@@ -262,6 +264,13 @@ definitions:
       turnpasstimestamps:
         items:
           $ref: '#/definitions/pgtype.Timestamptz'
+        type: array
+    type: object
+  vo.Hand:
+    properties:
+      cards:
+        items:
+          $ref: '#/definitions/queries.Matchcard'
         type: array
     type: object
   vo.HandModifier:
@@ -531,6 +540,64 @@ paths:
       summary: Join match by id
       tags:
       - match
+  /match/{matchId}/deck/kitty:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: match id
+        in: path
+        name: matchId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/vo.Hand'
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: GetKitty
+      tags:
+      - match
+  /match/{matchId}/deck/shuffle:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: match id
+        in: path
+        name: matchId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/vo.Hand'
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: PutSHuffle
+      tags:
+      - deck
   /match/{matchId}/determinefirst/:
     put:
       consumes:
@@ -573,6 +640,35 @@ paths:
       - description: account id
         in: path
         name: accountId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/vo.MatchDetailsResponse'
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Join match by id
+      tags:
+      - match
+  /match/{matchId}/pass:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: match id
+        in: path
+        name: matchId
         required: true
         type: integer
       produces:
