# server/route/match/put_pass.go
@@ -2,11 +2,13 @@ package match
 
 import (
 	"context"
+	"encoding/json"
 	"net/http"
 	"strconv"
 	"time"
 
 	"github.com/bardic/gocrib/queries/queries"
+	"github.com/bardic/gocrib/vo"
 
 	conn "github.com/bardic/gocrib/server/db"
 
@@ -25,8 +27,8 @@ import (
 //	@Failure	400		{object}	error
 //	@Failure	404		{object}	error
 //	@Failure	500		{object}	error
-//	@Router		/match/{matchId}/determinefirst/ [put]
-func DetermineFirst(c echo.Context) error {
+//	@Router		/match/{matchId}/pass [put]
+func Pass(c echo.Context) error {
 	matchId, err := strconv.Atoi(c.Param("matchId"))
 
 	if err != nil {
@@ -39,18 +41,47 @@ func DetermineFirst(c echo.Context) error {
 	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
 	defer cancel()
 
-	currentPlayerTurn := new(int)
-	*currentPlayerTurn = 1
+	m, err := q.GetMatchById(ctx, &matchId)
+
+	if err != nil {
+		return c.JSON(http.StatusNotFound, err)
+	}
+
+	var match *vo.GameMatch
+	err = json.Unmarshal(m, &match)
+
+	if err != nil {
+		return c.JSON(http.StatusNotFound, err)
+	}
+
+	nextPlayer, err := q.GetNextPlayerInTurnOrder(ctx, queries.GetNextPlayerInTurnOrderParams{
+		Matchid: &matchId,
+		Column2: &match.Currentplayerturn,
+	})
+
+	if err != nil {
+		return c.JSON(http.StatusNotFound, err)
+	}
+
 	err = q.UpdateCurrentPlayerTurn(ctx, queries.UpdateCurrentPlayerTurnParams{
 		ID:                &matchId,
-		Currentplayerturn: currentPlayerTurn,
+		Currentplayerturn: nextPlayer.ID,
 	})
 
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, err)
 	}
 
-	match, err := q.UpdateGameState(ctx, queries.UpdateGameStateParams{
+	err = q.UpdateDealerForMatch(ctx, queries.UpdateDealerForMatchParams{
+		ID:       &matchId,
+		Dealerid: nextPlayer.ID,
+	})
+
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, err)
+	}
+
+	updatedMatch, err := q.UpdateGameState(ctx, queries.UpdateGameStateParams{
 		ID:        &matchId,
 		Gamestate: queries.GamestateDeal,
 	})
@@ -59,5 +90,5 @@ func DetermineFirst(c echo.Context) error {
 		return c.JSON(http.StatusInternalServerError, err)
 	}
 
-	return c.JSON(http.StatusOK, match)
+	return c.JSON(http.StatusOK, updatedMatch)
 }
